Bug 485761 - Events of newly added .ics calendar aren't shown
Summary: Events of newly added .ics calendar aren't shown
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-18 20:57 UTC by jakub.nowak98
Modified: 2024-05-13 07:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jakub.nowak98 2024-04-18 20:57:32 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY

After importing .ics as a separate calendar, events aren't shown until explicitly updating the folder.


STEPS TO REPRODUCE
1. Import .ics file.
2. Choose "Add as new calendar". 
3. Right-click newly added calendar and choose "Update Folder" or "Update Calendar".

OBSERVED RESULT
Events aren't showing up after new calendar is added (step 2.). But they do show up after updating the calendar.

EXPECTED RESULT
New events should show up immediately after new calendar is created.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: arch-linux
Operating System: Arch Linux 
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.7.8-zen1-1-zen (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2024-05-09 19:31:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/155
Comment 2 Carl Schwan 2024-05-13 07:44:52 UTC
Git commit 7eb6f2bee01a5463550301f58710846c51dc02a4 by Carl Schwan, on behalf of Daniel Vrátil.
Committed on 13/05/2024 at 07:44.
Pushed by carlschwan into branch 'release/24.05'.

SingleFileResource: trigger sync after initially loading file on start

This ensures that the SingleFileResource-derived resoures (e.g. iCal) will

automatically load incidences from the file immediately after initial creation
and will also automatically re-sync after start.
FIXED-IN: 24.05.1


(cherry picked from commit 10d9e913076c056862fa8dd1d443393aab66fcd8)

M  +3    -2    resources/shared/singlefileresource/singlefileresourcebase.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/7eb6f2bee01a5463550301f58710846c51dc02a4
Comment 3 Carl Schwan 2024-05-13 07:51:48 UTC
Git commit 10d9e913076c056862fa8dd1d443393aab66fcd8 by Carl Schwan, on behalf of Daniel Vrátil.
Committed on 13/05/2024 at 07:43.
Pushed by carlschwan into branch 'master'.

SingleFileResource: trigger sync after initially loading file on start

This ensures that the SingleFileResource-derived resoures (e.g. iCal) will

automatically load incidences from the file immediately after initial creation
and will also automatically re-sync after start.
FIXED-IN: 24.05.1

M  +3    -2    resources/shared/singlefileresource/singlefileresourcebase.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/10d9e913076c056862fa8dd1d443393aab66fcd8