SingleFileResource: trigger sync after initially loading file on start

This ensures that the SingleFileResource-derived resoures (e.g. iCal) will

automatically load incidences from the file immediately after initial creation
and will also automatically re-sync after start.

BUG: 485761
FIXED-IN: 24.05.1